[package]
name = "genuuid"
version = "0.5.5"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.4"
thiserror = "1.0.51"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
