[package]
name = "genuuid"
version = "0.5.8"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.0.4"
