[package]
name = "genuuid"
version = "0.5.14"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
